# advent2022

./: Cargo.toml  README.md
benches/: day01.rs
day01/: Cargo.toml
day01/benches/: day01.rs
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/benches/: day02.rs
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/benches/: day03.rs
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/benches/: day04.rs
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/benches/: day05.rs
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/benches/: day06.rs
day06/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/benches/: day08.rs
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/benches/: day09.rs
day09/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/benches/: day10.rs
day10/src/: lib.rs  main.rs
input/: day10.txt
src/: day01.rs
src/day01/: lib.rs  main.rs
