[package]
name = "advent2022"
version = "0.1.0"
repository = "https://github.com/falsovsky/advent2022"
description = "My attempts to solve Advent of Code 2022"
readme = "README.md"
license = "BSD"
keywords = ["advent", "code", "2022"]
categories = ["challenge"]
edition = "2021"

[[bin]]
name = "day01"
path = "src/day01.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]